--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   dependencies:
   table_calendar: ^3.0.3
   url_launcher: ^6.0.15
+  shared_preferences: ^2.0.11
 
 dev_dependencies:
   flutter_test:
